# SWTE_UTN_FRN_GESE_PID

conversión e inyección a la red/: docs convertidor 2025-04.md
conversión e inyección a la red/pruebas/: Simulacion en triangulo rev 5 - edit.xlsx  Simulacion en triangulo rev 5 - edit_2.xlsx
docs/Sinamics/: Configuracion Sinamics v3.docx
docs/control/: control_board_blocks.graphml  flowchart_tarea_control_simplified.graphml
docs/datos turbina 3/: Rotor_INTI_EOLOCAL_Nuevo -V2.txt  Rotor_INTI_EOLOCAL_Nuevo -V2.xlsx  Rotor_INTI_EOLOCAL_Nuevo.txt  Rotor_INTI_EOLOCAL_Nuevo.xlsx
docs/imgs otros/: Figuras.docx
docs/pruebas lab/: Medidor de Potencia.md  Simulacion en triangulo rev 1 - edit.xlsx  Simulacion en triangulo rev 1.xlsx  Simulacion en triangulo rev 3 - edit.xlsx  Simulacion en triangulo-1.xlsx  Simulacion en triangulo.xlsx  Simulacion en triangulo_com-Matlab.xlsx  datos_turbina_para_cpp.cpp
docs/rotor/: Rotor Eolocal.xlsx
partes/GUI/GUI_WTE/: Documentación GUI_WTE.md  (+1 more)
partes/placa de control/Soft/soft micro (versión PC)/WTE_control_v2/: CMakeLists.txt  Timer.hpp  communication.cpp  communication.h  control_io.cpp  machine_state.cpp  machine_state.h  main.cpp  simulation.cpp  simulation.h
partes/placa de control/Soft/soft micro (versión PC)/WTE_control_v2_2/: CMakeLists.txt  communication.cpp  communication.h  control_io.cpp  control_io.h  data_handler.cpp  data_handler.h  machine_state.cpp  machine_state.h  main.cpp  simulation.cpp  simulation.h
partes/placa de control/Soft/soft micro (versión PC)/WTE_control_v2_2/PC/: TimerImp.hpp
(+156 files in other folders)
